--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -23,7 +23,22 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "clear_output()\n",
-        "print('\u001b[1;32mDrive Connected ✓')"
+        "print('\u001b[1;32mDrive Connected ✓')\n",
+        "\n",
+        "\n",
+        "\n",
+        "#markdown Download tool\n",
+        "#import os\n",
+        "#from IPython.display import clear_output\n",
+        "\n",
+        "#save_models_dir = \"/content/sample_data\"#@param {type:\"string\"}\n",
+        "#os.chdir(save_models_dir)\n",
+        "#url = \"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
+        "#!wget --no-check-certificate $url\n",
+        "\n",
+        "#clear_output()\n",
+        "#print('[1;32mModel Save ✓')\n",
+        "     "
       ]
     },
     {
@@ -49,7 +64,7 @@
         "model_init = \"\" #@param {type:\"string\"}\n",
         "models_dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
-        "SDZ_Dreambooth = \"\" #@param [\"\", \"SDZ_New_Dreambooth\", \"SDZ_Old_Dreambooth\"]\n",
+        "SDZ_Training = \"\" #@param [\"\", \"SDZ_kohya\", \"SDZ_New_Dreambooth\", \"SDZ_Old_Dreambooth\"]\n",
         "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
         "SDZ_Upscaler = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = False #@param {type:\"boolean\"}\n",
@@ -123,7 +138,6 @@
         "#    !git clone https://github.com/Vetchems/sd-model-preview.git\n",
         "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
-        "    !git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
         "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
         "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
         "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
@@ -202,13 +216,19 @@
         "    %cd ..\n",
         "    %cd ..\n",
         "\n",
-        "  if SDZ_Dreambooth == \"SDZ_New_Dreambooth\":\n",
+        "  if SDZ_Training == \"SDZ_kohya\":\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
+        "    %cd ..\n",
+        "\n",
+        "  elif SDZ_Training == \"SDZ_New_Dreambooth\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
         "    \n",
-        "  elif SDZ_Dreambooth == \"SDZ_Old_Dreambooth\":\n",
+        "  elif SDZ_Training == \"SDZ_Old_Dreambooth\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
         "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
@@ -232,7 +252,7 @@
         "    %cd ..\n",
         "\n",
         "  else:\n",
-        "    SDZ_Dreambooth == \"\"\n",
+        "    SDZ_Training == \"\"\n",
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "  if SDZ_Big_Models:\n",
