--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -64,7 +64,7 @@
         "model_init = \"\" #@param {type:\"string\"}\n",
         "models_dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Args = \"\" # @param {type:\"string\"}\n",
-        "SDZ_Training = \"\" #@param [\"\", \"SDZ_kohya\", \"SDZ_New_Dreambooth\", \"SDZ_Old_Dreambooth\"]\n",
+        "SDZ_Training = \"\" #@param [\"\", \"Kohya\", \"New_Dreambooth\", \"Old_Dreambooth\"]\n",
         "SDZ_Extensions = False #@param {type:\"boolean\"}\n",
         "SDZ_Upscaler = False #@param {type:\"boolean\"}\n",
         "SDZ_Big_Models = False #@param {type:\"boolean\"}\n",
@@ -216,19 +216,19 @@
         "    %cd ..\n",
         "    %cd ..\n",
         "\n",
-        "  if SDZ_Training == \"SDZ_kohya\":\n",
+        "  if SDZ_Training == \"Kohya\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/ddpn08/kohya-sd-scripts-webui.git\n",
         "    %cd ..\n",
         "\n",
-        "  elif SDZ_Training == \"SDZ_New_Dreambooth\":\n",
+        "  elif SDZ_Training == \"New_Dreambooth\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "    %cd ..\n",
         "    \n",
-        "  elif SDZ_Training == \"SDZ_Old_Dreambooth\":\n",
+        "  elif SDZ_Training == \"Old_Dreambooth\":\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    if not os.path.exists('/usr/local/lib/python3.10/site-packages/open_clip'):\n",
         "      !wget -N https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
