--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -101,7 +101,7 @@
         "\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
-        "  \n",
+        "  !pip install pytorch_lightning==1.7.7\n",
         "  !pip install triton==2.0.0.dev20221202.\n",
         "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "  !git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
