--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -304,14 +304,13 @@
         "        !sed -i 's@cmd_opts.lowram else \\\"cuda\\\"@cmd_opts.lowram else \\\"cpu\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "        !sed -i \"s@map_location='cuda'@map_location='cpu'@\" $SDZ_webui_path'/modules/extras.py'\n",
         "\n",
-        "\n",
         "        clear_output()\n",
         "    print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
-        "    if SDZ_Version.value == \"V1.5\":\n",
+        "    selected_option = SDZ_Version.value\n",
+        "    if selected_option == \"V1.5\":\n",
         "        !python launch.py $share\n",
-        "\n",
-        "    elif SDZ_Version == \"V2.1\":\n",
+        "    elif selected_option == \"V2.1\":\n",
         "        !python launch.py $share $SDZconfigV2"
       ],
       "metadata": {
