--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -98,10 +98,6 @@
         "                            SDZ_Training, SDZ_Extensions, SDZ_Upscaler,\n",
         "                            SDZ_ControlNet, SDZ_Big_Models, SDZ_Continue])\n",
         "\n",
-        "boton_runSDZ.on_click(runSDZ)\n",
-        "display(HTML(style))\n",
-        "display(widgets_box, boton_runSDZ)\n",
-        "\n",
         "# SDZ_RunSDZ\n",
         "def runSDZ(b):\n",
         "    global widgets_box, boton_runSDZ\n",
@@ -311,7 +307,11 @@
         "    if selected_option == \"V1.5\":\n",
         "        !python launch.py $share\n",
         "    elif selected_option == \"V2.1\":\n",
-        "        !python launch.py $share $SDZconfigV2"
+        "        !python launch.py $share $SDZconfigV2\n",
+        "\n",
+        "boton_runSDZ.on_click(runSDZ)\n",
+        "display(HTML(style))\n",
+        "display(widgets_box, boton_runSDZ)"
       ],
       "metadata": {
         "cellView": "form",
