--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -96,7 +96,8 @@
         "widgets_box = widgets.VBox([SDZ_install_widget, SDZ_Version, Download_Base_Model,\n",
         "                            model_init, models_dir, SDZ_Args,\n",
         "                            SDZ_Training, SDZ_Extensions, SDZ_Upscaler,\n",
-        "                            SDZ_ControlNet, SDZ_Big_Models, SDZ_Continue])\n",
+        "                            SDZ_ControlNet, SDZ_Big_Models, SDZ_Continue],\n",
+        "                            layout=widgets.Layout(height='420px', width='100%'))\n",
         "\n",
         "# SDZ_RunSDZ\n",
         "def runSDZ(b):\n",
