--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -54,56 +54,83 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "##@markdown <left><font face='Squired Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
+        "\n",
         "import os\n",
         "import shutil\n",
+        "import urllib.request\n",
         "#from IPython.utils import capture\n",
         "from IPython.utils.capture import capture_output\n",
         "from IPython.display import clear_output\n",
         "import sys\n",
         "import fileinput\n",
         "import ipywidgets as widgets\n",
+        "from ipywidgets import HBox, VBox\n",
         "from ipywidgets import interact, interactive, fixed\n",
+        "from ipywidgets import Layout, SelectMultiple\n",
         "from IPython.core.display import HTML\n",
         "\n",
         "SDZ_install = \"/content/sample_data\"\n",
-        "SDZ_install_widget = widgets.Text(value=SDZ_install, description=\"SDZ_install:\")\n",
-        "SDZ_Version = widgets.Dropdown(options=[\"V1.5\", \"V2.1\"], description=\"SDZ_Version:\")\n",
-        "Download_Base_Model = widgets.Dropdown(options=[\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\"], description=\"SDZ_Model:\")\n",
+        "SDZ_install_widget = widgets.Text(value=SDZ_install, description=\"SDZ_install\")\n",
+        "SDZ_Version = widgets.Dropdown(options=[\"V1.5\", \"V2.1\"], description=\"Version\")\n",
+        "Download_Base_Model = widgets.Dropdown(options=[\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\"], description=\"Model\")\n",
         "SDZ = \"stable-diffusion-webui\"\n",
-        "SDZ_widget = widgets.Text(value=SDZ, description=\"SDZ:\")\n",
+        "SDZ_widget = widgets.Text(value=SDZ, description=\"SDZ\")\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
-        "SDZ_webui_path_widget = widgets.Text(value=SDZ_webui_path, description=\"SDZ_webui_path:\")\n",
-        "model_init = widgets.Text(value=\"\", description=\"model_init:\")\n",
-        "models_dir = widgets.Text(value=\"\", description=\"models_dir:\")\n",
-        "SDZ_Args = widgets.Text(value=\"\", description=\"SDZ_Args:\")\n",
-        "SDZ_Training = widgets.Dropdown(options=[\"\", \"Kohya\", \"New_Dreambooth\", \"Old_Dreambooth\"], description=\"SDZ_Training:\")\n",
-        "SDZ_Extensions = widgets.Checkbox(value=False, description=\"SDZ_Extensions:\")\n",
-        "SDZ_ControlNet = widgets.Checkbox(value=False, description=\"SDZ_ControlNet:\")\n",
-        "SDZ_Upscaler = widgets.Checkbox(value=False, description=\"SDZ_Upscaler:\")\n",
-        "SDZ_Big_Models = widgets.Checkbox(value=False, description=\"SDZ_Big_Models:\")\n",
-        "SDZ_Continue = widgets.Checkbox(value=False, description=\"SDZ_Continue:\")\n",
+        "SDZ_webui_path_widget = widgets.Text(value=SDZ_webui_path, description=\"SDZ_webui_path\")\n",
+        "model_init = widgets.Text(value=\"\", description=\"Model_init\")\n",
+        "models_dir = widgets.Text(value=\"\", description=\"Models_dir\")\n",
+        "SDZ_Args = widgets.Text(value=\"\", description=\"Args\")\n",
+        "SDZ_Training = widgets.Dropdown(options=[\"\", \"Kohya\", \"New_Dreambooth\", \"Old_Dreambooth\"], description=\"Training\")\n",
+        "\n",
+        "canny = widgets.Checkbox(value=False, description=\"canny\")\n",
+        "depth = widgets.Checkbox(value=False, description=\"depth\")\n",
+        "hed = widgets.Checkbox(value=False, description=\"hed\")\n",
+        "mlsd = widgets.Checkbox(value=False, description=\"mlsd\")\n",
+        "normal = widgets.Checkbox(value=False, description=\"normal\")\n",
+        "openpose = widgets.Checkbox(value=False, description=\"openpose\")\n",
+        "scribble = widgets.Checkbox(value=False, description=\"scribble\")\n",
+        "seg = widgets.Checkbox(value=False, description=\"seg\")\n",
+        "\n",
+        "SDZ_Extensions = widgets.Checkbox(value=False, description=\"Extensions\")\n",
+        "SDZ_Upscaler = widgets.Checkbox(value=False, description=\"Upscaler\")\n",
+        "SDZ_Big_Models = widgets.Checkbox(value=False, description=\"Big_Models\")\n",
+        "SDZ_Continue = widgets.Checkbox(value=False, description=\"🔵 SDZ CONTINUE\")\n",
+        "\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + model_init.value + \" --ckpt-dir=\" + models_dir.value + \" \" + SDZ_Args.value\n",
         "\n",
         "os.chdir(SDZ_install_widget.value)\n",
-        "boton_runSDZ = widgets.Button(description=\"Run>>>SDZ\")\n",
+        "boton_runSDZ = widgets.Button(description=\"⭕ RUN > > > SDZ\")\n",
         "boton_runSDZ.style.button_color = '#1e1e1e'\n",
         "boton_runSDZ.style.font_weight = 'bold'\n",
         "boton_runSDZ.style.color = 'black'\n",
         "\n",
-        "# Box Widgets\n",
-        "widgets_box = widgets.VBox([SDZ_install_widget, SDZ_Version, Download_Base_Model,\n",
-        "                            model_init, models_dir, SDZ_Args,\n",
-        "                            SDZ_Training, SDZ_Extensions, SDZ_Upscaler,\n",
-        "                            SDZ_ControlNet, SDZ_Big_Models, SDZ_Continue],\n",
-        "                            layout=widgets.Layout(height='420px', width='100%'))\n",
+        "left_box = widgets.VBox([canny, depth, hed, mlsd])\n",
+        "right_box = widgets.VBox([normal, openpose, scribble, seg])\n",
+        "group_box = widgets.HBox([left_box, right_box],layout=widgets.Layout(height='155px', width='100%'))\n",
+        "\n",
+        "left_box.layout.max_width = '150px'\n",
+        "right_box.layout.max_width = '170px'\n",
+        "left_box.layout.overflow = 'hidden'\n",
+        "right_box.layout.overflow = 'hidden'\n",
+        "\n",
+        "widgets_box = widgets.VBox([SDZ_install_widget, SDZ_Version, Download_Base_Model,],layout=widgets.Layout(height='120px', width='100%'))\n",
+        "final_box = widgets.VBox([model_init, models_dir, SDZ_Args, SDZ_Training],layout=widgets.Layout(height='160px', width='100%'))\n",
+        "final_box1 = widgets.VBox([SDZ_Extensions, SDZ_Upscaler, SDZ_Big_Models],layout=widgets.Layout(height='140px', width='100%'))\n",
+        "final_box2 = widgets.VBox([SDZ_Continue],layout=widgets.Layout(height='90px', width='100%'))\n",
         "\n",
         "# SDZ_RunSDZ\n",
         "def runSDZ(b):\n",
         "    global widgets_box, boton_runSDZ\n",
         "    widgets_box.close()\n",
+        "    final_box.close()\n",
+        "    final_box1.close()\n",
+        "    final_box2.close()\n",
+        "    group_box.close()\n",
         "    boton_runSDZ.close()\n",
+        "    group_title.close()\n",
         "\n",
         "    if not SDZ_Continue.value:\n",
         "      with capture_output() as cap:\n",
@@ -117,6 +144,7 @@
         "          !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
         "\n",
         "        %cd stable-diffusion-webui\n",
+        "        !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/Upscalers.txt\n",
         "        !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "        !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
         "\n",
@@ -169,20 +197,27 @@
         "        %cd ..\n",
         "\n",
         "# SDZ_ControlNet\n",
-        "      if SDZ_ControlNet.value:\n",
-        "        os.chdir(SDZ_webui_path_widget.value)\n",
-        "        %cd extensions\n",
-        "        !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
-        "        %cd sd-webui-controlnet/models\n",
-        "        !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_canny.pth\n",
-        "        !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_depth.pth\n",
-        "        !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_hed.pth\n",
-        "        !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_mlsd.pth\n",
-        "        !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_normal.pth\n",
-        "        !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_openpose.pth\n",
-        "        !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_scribble.pth\n",
-        "        !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_seg.pth\n",
-        "        %cd ../../..\n",
+        "      os.chdir(SDZ_webui_path_widget.value)\n",
+        "      %cd extensions\n",
+        "      !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
+        "      %cd sd-webui-controlnet/models\n",
+        "\n",
+        "      if canny.value:\n",
+        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_canny.pth\n",
+        "      if depth.value:\n",
+        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_depth.pth\n",
+        "      if hed.value:\n",
+        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_hed.pth\n",
+        "      if mlsd.value:\n",
+        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_mlsd.pth\n",
+        "      if normal.value:\n",
+        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_normal.pth\n",
+        "      if openpose.value:\n",
+        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_openpose.pth\n",
+        "      if scribble.value:\n",
+        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_scribble.pth\n",
+        "      if seg.value:\n",
+        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_seg.pth\n",
         "\n",
         "# SDZ_Upscalers\n",
         "      if SDZ_Upscaler.value:\n",
@@ -190,65 +225,19 @@
         "        if not os.path.exists('ESRGAN'):\n",
         "          os.makedirs('ESRGAN')\n",
         "        %cd ESRGAN\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NMKD-BrightenRedux_200k.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NMKDDetoon_97500_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NMKD-YandereInpaint_375000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NoiseToner-Poisson-Detailed_108000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x_NoiseToner-Uniform-Detailed_100000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_CountryRoads_377000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_fatal_Anime_500000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_Fatality_Comix_260000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_foolhardy_Remacri.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_Nickelback_70000G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NickelbackFS_72000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-Siax_200k.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKDSuperscale_Artisoft_120000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-Superscale-Artisoftject_210000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-Superscale-SP_178000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-UltraYandere_300k.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-UltraYandere-Lite_280k.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_NMKD-YandereNeoXL_200k.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_RealisticRescaler_100000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4x_Valar_v1.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/4xPSNR.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/8x_NMKD-Superscale_150000_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/8x_NMKD-Typescale_175k.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/8xPSNR.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/16xPSNR.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/A_ESRGAN_Single.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/BSRGAN.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/BSRGANx2.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/BSRNet.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/LADDIER1_282500_G.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/lollypop.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/sudo_rife4_269.662_testV1_scale1.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/WaifuGAN_v3_30000.pth\n",
+        "        with open(SDZ_webui_path_widget.value+'/'+'Upscalers.txt') as f:     _ = [urllib.request.urlretrieve(link.strip(), link.split('/')[-1]) for link in f.readlines()[1:35]]\n",
         "        %cd ..\n",
         "\n",
         "        if not os.path.exists('GFPGAN'):\n",
         "          os.makedirs('GFPGAN')\n",
         "        %cd GFPGAN\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.3.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.4.pth\n",
+        "        with open(SDZ_webui_path_widget.value+'/'+'Upscalers.txt') as f:     _ = [urllib.request.urlretrieve(link.strip(), link.split('/')[-1]) for link in f.readlines()[37:39]]\n",
         "        %cd ..\n",
         "\n",
         "        if not os.path.exists('SwinIR'):\n",
         "          os.makedirs('SwinIR')\n",
         "        %cd SwinIR\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DF2K_s64w8_SwinIR-M_x2.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DF2K_s64w8_SwinIR-M_x3.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DF2K_s64w8_SwinIR-M_x4.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DF2K_s64w8_SwinIR-M_x8.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DIV2K_s48w8_SwinIR-M_x2.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DIV2K_s48w8_SwinIR-M_x3.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DIV2K_s48w8_SwinIR-M_x4.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/001_classicalSR_DIV2K_s48w8_SwinIR-M_x8.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/003_realSR_BSRGAN_DFO_s64w8_SwinIR-M_x2_GAN-with-dict-keys-params-and-params_ema.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/003_realSR_BSRGAN_DFOWMFC_s64w8_SwinIR-L_x4_GAN-with-dict-keys-params-and-params_ema.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/Swin2SR_ClassicalSR_X2_64.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/Swin2SR_ClassicalSR_X4_64.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/Swin2SR_CompressedSR_X4_48.pth\n",
-        "        !wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/SwinIR/Swin2SR_RealworldSR_X4_64_BSRGAN_PSNR.pth\n",
+        "        with open(SDZ_webui_path_widget.value+'/'+'Upscalers.txt') as f:     _ = [urllib.request.urlretrieve(link.strip(), link.split('/')[-1]) for link in f.readlines()[40:55]]\n",
         "        %cd ../..\n",
         "\n",
         "# SDZ_Training\n",
@@ -290,7 +279,7 @@
         "      os.chdir(SDZ_webui_path_widget.value)\n",
         "\n",
         "# SDZ_Big_Models\n",
-        "      if SDZ_Big_Models:\n",
+        "      if SDZ_Big_Models.value:\n",
         "        !sed -i 's@cmd_opts.lowram else \\\"cpu\\\"@cmd_opts.lowram else \\\"cuda\\\"@' $SDZ_webui_path'/modules/shared.py'\n",
         "        !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
         "        \n",
@@ -311,7 +300,9 @@
         "        !python launch.py $share $SDZconfigV2\n",
         "\n",
         "boton_runSDZ.on_click(runSDZ)\n",
-        "display(widgets_box, boton_runSDZ)"
+        "group_title = widgets.HTML(value='ControlNet')\n",
+        "group_title2 = widgets.HTML(value='')\n",
+        "display(widgets_box, group_title, group_box, group_title2, final_box, final_box1, final_box2, boton_runSDZ)"
       ],
       "metadata": {
         "cellView": "form",
