--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -94,7 +94,7 @@
         "seg = widgets.Checkbox(value=False, description=\"seg\")\n",
         "\n",
         "SDZ_Extensions = widgets.Checkbox(value=False, description=\"Extensions\")\n",
-        "SDZ_Upscaler = widgets.Checkbox(value=False, description=\"Upscaler\")\n",
+        "SDZ_Upscaler = widgets.Checkbox(value=False, description=\"Upscalers\")\n",
         "SDZ_Big_Models = widgets.Checkbox(value=False, description=\"Big_Models\")\n",
         "SDZ_Continue = widgets.Checkbox(value=False, description=\"🔵 SDZ CONTINUE\")\n",
         "\n",
@@ -222,23 +222,30 @@
         "# SDZ_Upscalers\n",
         "      if SDZ_Upscaler.value:\n",
         "        os.chdir(SDZ_webui_path_widget.value+'/'+'models')\n",
+        "\n",
         "        if not os.path.exists('ESRGAN'):\n",
-        "          os.makedirs('ESRGAN')\n",
-        "        %cd ESRGAN\n",
-        "        with open(SDZ_webui_path_widget.value+'/'+'Upscalers.txt') as f:     _ = [urllib.request.urlretrieve(link.strip(), link.split('/')[-1]) for link in f.readlines()[1:35]]\n",
-        "        %cd ..\n",
+        "            os.makedirs('ESRGAN')\n",
+        "        with open(SDZ_webui_path_widget.value+'/'+'Upscalers.txt') as f:\n",
+        "            for i, line in enumerate(f):\n",
+        "                if 1 <= i <= 34:\n",
+        "                    link = line.strip()\n",
+        "                    os.system('wget --timestamping -P ESRGAN {}'.format(link))\n",
         "\n",
         "        if not os.path.exists('GFPGAN'):\n",
-        "          os.makedirs('GFPGAN')\n",
-        "        %cd GFPGAN\n",
-        "        with open(SDZ_webui_path_widget.value+'/'+'Upscalers.txt') as f:     _ = [urllib.request.urlretrieve(link.strip(), link.split('/')[-1]) for link in f.readlines()[37:39]]\n",
-        "        %cd ..\n",
+        "            os.makedirs('GFPGAN')\n",
+        "        with open(SDZ_webui_path_widget.value+'/'+'Upscalers.txt') as f:\n",
+        "            for i, line in enumerate(f):\n",
+        "                if 36 <= i <= 38:\n",
+        "                    link = line.strip()\n",
+        "                    os.system('wget --timestamping -P GFPGAN {}'.format(link))\n",
         "\n",
         "        if not os.path.exists('SwinIR'):\n",
-        "          os.makedirs('SwinIR')\n",
-        "        %cd SwinIR\n",
-        "        with open(SDZ_webui_path_widget.value+'/'+'Upscalers.txt') as f:     _ = [urllib.request.urlretrieve(link.strip(), link.split('/')[-1]) for link in f.readlines()[40:55]]\n",
-        "        %cd ../..\n",
+        "            os.makedirs('SwinIR')\n",
+        "        with open(SDZ_webui_path_widget.value+'/'+'Upscalers.txt') as f:\n",
+        "            for i, line in enumerate(f):\n",
+        "                if 40 <= i <= 54:\n",
+        "                    link = line.strip()\n",
+        "                    os.system('wget --timestamping -P SwinIR {}'.format(link))\n",
         "\n",
         "# SDZ_Training\n",
         "      selected_option = SDZ_Training.value\n",
