--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -193,6 +193,7 @@
         "        !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
         "        !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
         "        !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
+        "        !git clone https://github.com/fkunn1326/openpose-editor.git\n",
         "        !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
         "        %cd ..\n",
         "\n",
