--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -83,16 +83,7 @@
         "models_dir = widgets.Text(value=\"\", description=\"Models_dir\")\n",
         "SDZ_Args = widgets.Text(value=\"\", description=\"Args\")\n",
         "SDZ_Training = widgets.Dropdown(options=[\"\", \"Kohya\", \"New_Dreambooth\", \"Old_Dreambooth\"], description=\"Training\")\n",
-        "\n",
-        "canny = widgets.Checkbox(value=False, description=\"canny\")\n",
-        "depth = widgets.Checkbox(value=False, description=\"depth\")\n",
-        "hed = widgets.Checkbox(value=False, description=\"hed\")\n",
-        "mlsd = widgets.Checkbox(value=False, description=\"mlsd\")\n",
-        "normal = widgets.Checkbox(value=False, description=\"normal\")\n",
-        "openpose = widgets.Checkbox(value=False, description=\"openpose\")\n",
-        "scribble = widgets.Checkbox(value=False, description=\"scribble\")\n",
-        "seg = widgets.Checkbox(value=False, description=\"seg\")\n",
-        "\n",
+        "SDZ_ControlNet = widgets.Checkbox(value=False, description=\"ControlNet\")\n",
         "SDZ_Extensions = widgets.Checkbox(value=False, description=\"Extensions\")\n",
         "SDZ_Upscaler = widgets.Checkbox(value=False, description=\"Upscalers\")\n",
         "SDZ_Big_Models = widgets.Checkbox(value=False, description=\"Big_Models\")\n",
@@ -107,18 +98,9 @@
         "boton_runSDZ.style.font_weight = 'bold'\n",
         "boton_runSDZ.style.color = 'black'\n",
         "\n",
-        "left_box = widgets.VBox([canny, depth, hed, mlsd])\n",
-        "right_box = widgets.VBox([normal, openpose, scribble, seg])\n",
-        "group_box = widgets.HBox([left_box, right_box],layout=widgets.Layout(height='155px', width='100%'))\n",
-        "\n",
-        "left_box.layout.max_width = '150px'\n",
-        "right_box.layout.max_width = '170px'\n",
-        "left_box.layout.overflow = 'hidden'\n",
-        "right_box.layout.overflow = 'hidden'\n",
-        "\n",
         "widgets_box = widgets.VBox([SDZ_install_widget, SDZ_Version, Download_Base_Model,],layout=widgets.Layout(height='120px', width='100%'))\n",
         "final_box = widgets.VBox([model_init, models_dir, SDZ_Args, SDZ_Training],layout=widgets.Layout(height='160px', width='100%'))\n",
-        "final_box1 = widgets.VBox([SDZ_Extensions, SDZ_Upscaler, SDZ_Big_Models],layout=widgets.Layout(height='140px', width='100%'))\n",
+        "final_box1 = widgets.VBox([SDZ_Extensions, SDZ_ControlNet, SDZ_Upscaler, SDZ_Big_Models],layout=widgets.Layout(height='170px', width='100%'))\n",
         "final_box2 = widgets.VBox([SDZ_Continue],layout=widgets.Layout(height='90px', width='100%'))\n",
         "\n",
         "# SDZ_RunSDZ\n",
@@ -198,28 +180,24 @@
         "        %cd ..\n",
         "\n",
         "# SDZ_ControlNet\n",
-        "      os.chdir(SDZ_webui_path_widget.value)\n",
-        "      %cd extensions\n",
-        "      !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
-        "      %cd sd-webui-controlnet/models\n",
-        "\n",
-        "      if canny.value:\n",
-        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_canny.pth\n",
-        "      if depth.value:\n",
-        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_depth.pth\n",
-        "      if hed.value:\n",
-        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_hed.pth\n",
-        "      if mlsd.value:\n",
-        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_mlsd.pth\n",
-        "      if normal.value:\n",
-        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_normal.pth\n",
-        "      if openpose.value:\n",
-        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_openpose.pth\n",
-        "      if scribble.value:\n",
-        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_scribble.pth\n",
-        "      if seg.value:\n",
-        "          !wget https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_seg.pth\n",
-        "\n",
+        "      if SDZ_ControlNet.value:\n",
+        "        os.chdir(SDZ_webui_path_widget.value)\n",
+        "        %cd extensions\n",
+        "        !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
+        "        %cd sd-webui-controlnet/models\n",
+        "        !git clone https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_canny-fp16.safetensors\n",
+        "        !git clone https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_depth-fp16.safetensors\n",
+        "        !git clone https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_hed-fp16.safetensors\n",
+        "        !git clone https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_mlsd-fp16.safetensors\n",
+        "        !git clone https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_normal-fp16.safetensors\n",
+        "        !git clone https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_openpose-fp16.safetensors\n",
+        "        !git clone https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_scribble-fp16.safetensors\n",
+        "        !git clone https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_seg-fp16.safetensors\n",
+        "        !git clone https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_keypose-fp16.safetensors\n",
+        "        !git clone https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_seg-fp16.safetensors\n",
+        "        !git clone https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors\n",
+        "        %cd ../../..\n",
+        "        \n",
         "# SDZ_Upscalers\n",
         "      if SDZ_Upscaler.value:\n",
         "        os.chdir(SDZ_webui_path_widget.value+'/'+'models')\n",
@@ -308,9 +286,8 @@
         "        !python launch.py $share $SDZconfigV2\n",
         "\n",
         "boton_runSDZ.on_click(runSDZ)\n",
-        "group_title = widgets.HTML(value='ControlNet')\n",
         "group_title2 = widgets.HTML(value='')\n",
-        "display(widgets_box, group_title, group_box, group_title2, final_box, final_box1, final_box2, boton_runSDZ)"
+        "display(widgets_box, group_title2, final_box, final_box1, final_box2, boton_runSDZ)"
       ],
       "metadata": {
         "cellView": "form",
